fixup the text alignment

--- a/public/stylesheets/_submission.sass
+++ b/public/stylesheets/_submission.sass
@@ -7,9 +7,9 @@
 
     input
       border: none
-      font-size: 3rem
+      font-size: 1.5rem
+      text-align: center
       width: 100%
-      padding: 0 5rem
       outline: none
       background-color: initial
 
