--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -49,9 +49,9 @@ html, body {
     margin: 1rem auto; }
     .new-submission fieldset input {
       border: none;
-      font-size: 3rem;
+      font-size: 1.5rem;
+      text-align: center;
       width: 100%;
-      padding: 0 5rem;
       outline: none;
       background-color: initial; }
   .new-submission .new-link {
